refactor: Refactor for immutability